# welcomebot

./: .gitignore  Cargo.toml  debugcode.md
corelib/: Cargo.toml
corelib/src/: logging.rs
discord-bot/: Cargo.toml
discord-bot/src/: embed.rs  error.rs  main.rs  moderation.rs  util.rs  welcome.rs
discord-bot/src/command/: moderation.rs  version.rs  welcome.rs
discord-bot/src/interaction/: button.rs  mod.rs
entity/: Cargo.toml
entity/src/: auto_ban_role.rs  ban_entry.rs  guild.rs  image.rs  kick_entry.rs  lib.rs  prelude.rs  twitch_broadcaster.rs  twitch_token.rs  web_user.rs  welcome_settings.rs
img-gen/: Cargo.toml
img-gen/src/: error.rs  lib.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240910_080929_seeding_image.rs  m20250104_223723_autoban_roles.rs  m20250119_145427_guild_auto_ban_role_id_and_log.rs  m20250119_164804_ban_log.rs  m20250121_074701_ban_message_text.rs  m20250121_102948_enable_welcome_message.rs  m20250313_110722_kick_ban_settings.rs  m20250327_133628_twitch_tables.rs  m20250404_204558_broadcaster_based_tokens.rs  m20250525_091835_webuser_tables.rs  m20250618_085627_update_kick_ban_log.rs
service/: Cargo.toml
service/src/: ban_entry.rs  guild.rs  image.rs  kick_entry.rs  lib.rs  mutation.rs  query.rs  twitch_broadcaster.rs  web_user.rs  welcome_settings.rs
service/src/mutation/: ban_entry.rs  guild.rs  image.rs  twitch_broadcaster.rs  welcome_settings.rs
service/src/query/: ban_entry.rs  guild.rs  image.rs  mod.rs  twitch_broadcaster.rs  welcome_settings.rs
src/: embed.rs  error.rs  interaction.rs  main.rs  moderation.rs  util.rs  welcome.rs
src/command/: mod.rs  moderation.rs  settings.rs  version.rs  welcome.rs
src/interaction/: button.rs  mod.rs
src/utils/: image.rs  mod.rs  moderation.rs  welcome.rs
ttv/: Cargo.toml
ttv/src/: auth.rs  bot.rs  builder.rs  error.rs  lib.rs  queue.rs  utils.rs  websocket.rs
twitch-bot/: Cargo.toml
twitch-bot/src/: bot.rs  builder.rs  error.rs  main.rs  utils.rs
web/: Cargo.toml
webapp/: Cargo.toml  sites.md
webapp/src/: app.rs  auth.rs  discord.rs  discord_oauth.rs  home.rs  lib.rs  main.rs  model.rs  oauth2.rs  profile.rs  twitch.rs  twitch_auth.rs
webapp/src/components/: footer.rs  guild_select.rs  login_button.rs  mod.rs  navbar.rs  sidebar.rs
webapp/src/dashboard/: mod.rs
webapp/src/dashboard/discord/: dashboard.rs  mod.rs  moderation.rs  welcome.rs
webapp/src/dashboard/twitch/: auth.rs  dashboard.rs  mod.rs  settings.rs
webapp/src/discord/: client.rs  mod.rs  oauth.rs  scopes.rs  user.rs
webapp/src/pages/: home.rs  mod.rs  not_found.rs  profile.rs
webapp/src/pages/discord/: connect.rs  mod.rs  moderation.rs  welcome.rs
webapp/src/pages/twitch/: connect.rs  connected.rs  mod.rs
webapp/src/twitch/: auth.rs
webapp/style/: main.scss
