[package]
name = "welcomebot"
version = "0.1.2"
edition = "2021"
resolver = "2"

[workspace]
members = [".", "entity", "img-gen", "migration", "service"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
welcome-service = { path = "service" }
ab_glyph = "0.2.29"
img-gen = { path = "img-gen" }
image = "0.25.5"
poise = "0.6.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
log = "0.4.22"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = "0.12.12"
tempfile = "3.15.0"
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.9"
anyhow = "1.0.95"
chrono = "0.4.39"
