[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]

# internal dependencies
entity = { path = "../entity" }
migration = { path = "../migration" }
welcome-service = { path = "../service" }
ttv = { path = "../ttv" }
img-gen = { path = "../img-gen" }

# other dependencies
ab_glyph = "0.2.29"
image = "0.25.6"
poise = "0.6.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
reqwest = "0.12.15"
tempfile = "3.19.1"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
chrono = "0.4.40"
async-trait = "0.1.88"
crossbeam-channel = "0.5.14"
twitch_api = { version = "0.7.2", features = ["helix", "eventsub", "hmac", "reqwest"] }
twitch_oauth2 = { version = "0.15.2", features = ["client"] }
futures = "0.3.31"

# logging/tracing
log = "0.4.27"
logforth = { version = "0.23.1", features = ["colored", "fastrace", "json", "rolling-file"] }
fastrace = { version = "0.7", features = ["enable"] }
