[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]

# internal dependencies
entity = { path = "../entity" }
migration = { path = "../migration" }
welcome-service = { path = "../service" }
img-gen = { path = "../img-gen" }
corelib = { path = "../corelib" }

# other dependencies
ab_glyph = "0.2.29"
image = "0.25.6"
poise = "0.6.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
reqwest = "0.12.15"
tempfile = "3.19.1"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
chrono = "0.4.40"
async-trait = "0.1.88"

# logging/tracing
log = "0.4.27"
fastrace = { version = "0.7", features = ["enable"] }
