[package]
name = "welcome-service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
chrono = "0.4.41"
fastrace = "0.7.11"
log = "0.4.27"

[dependencies.sea-orm]
version = "1.1.12" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-sqlite",
]