[package]
name = "ttv"
version = "0.1.0"
edition = "2021"

[dependencies]
twitch_api = { version = "0.7.1", features = ["helix", "eventsub", "hmac", "reqwest"] }
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
twitch_oauth2 = { version = "0.15.2", features = ["client"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"