[package]
name = "ttv"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "./../entity" }
welcome-service = { path = "./../service" }
twitch_api = { version = "0.7.2", features = ["helix", "eventsub", "hmac", "reqwest"] }
twitch_oauth2 = { version = "0.15.2", features = ["client"] }
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.19"
crossbeam-channel = "0.5.14"
fastrace = "0.7"
log = "0.4.27"

[dependencies.sea-orm]
version = "1.1.7" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-sqlite",
]