[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
welcome-service = { path = "../service" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
log = "0.4.25"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.11"
chrono = "0.4.39"